# deep_research

./: .gitignore  README.md  deep_reseach_team.py  pyproject.toml  requirements.txt  socrates.py
examples/: example_recipe.json  input_example_1.json  input_example_2.json
results/: 20250205_203540_Project_2025_SWOT_outcome_for_EU.md  20250205_204125_US_concervatives_Project_2025_predictions_of_econo.md
