[tool.poetry]
name = "deep-research"
version = "0.1.0"
description = ""
authors = ["testost <arsi.virta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.1.0"
requests-oauthlib = "^2.0.0"
pandas = "^2.2.3"
googlemaps = "^4.10.0"
linkup = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
